# Risk-Aware-Scene-Tokens

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  RETROSPECTIVE.md  RUNBOOK.md  prd.md  pyproject.toml  render.yaml  stack.md  tasks.md
apps/: __init__.py
configs/: mvp0.yaml  windows_eval_suite.yaml  windows_eval_suite_extended.yaml  windows_eval_suite_sampled.yaml  windows_metadata_sim.yaml
docs/: artifact_manifest.json  artifact_manifest.md  demo_script_3min.md  deployment_guide.md  eval_comparison_report.md  project_summary.md  release_guide.md  reproducibility_guide.md  result_report.md  sample_size_convergence_report.json  sample_size_convergence_report.md  sampling_coverage_report.json  sampling_coverage_report.md  seed_stability_report.md  submission_checklist.md  technical_report.md
experiments/: analyze_sample_size_convergence.py  analyze_sampling_coverage.py  check_docs_consistency.py  check_submission_readiness.py  compare_eval_runs.py  compare_seed_sweep.py  export_decision_replay.py  generate_result_report.py  run_mvp0_vertical_slice.py  run_sample_size_sweep.py  run_sampled_seed_sweep.py  run_windows_eval_suite.py  run_windows_metadata_sim.py  smoke_ai2thor.py
rast/: __init__.py
scripts/: run_api.ps1  run_api.sh  smoke_api.ps1  smoke_api.sh
tests/: __init__.py  test_affordance_aware_planner.py  test_affordance_tokenizer.py  test_aggregate_results.py  test_api.py  test_artifact_manifest.py  test_compare_eval_runs.py  test_docs_consistency.py  test_entity_tokenizer.py  test_eval_sampling.py  test_latency.py  (+32 more)
(+54 files in other folders)
